# fastapi-practice

./: .env  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yaml  gunicorn.conf.py  main.py  pyproject.toml
api/: __init__.py  health_check.py
api/user/: route.py
config/: server.py  settings.py
database/: __init__.py  conn.py
database/user/: __init__.py
src/: api.py  config.py  exceptions.py  main.py
src/auth/: exctions.py  models.py  schemas.py  services.py  views.py
src/database/: core.py  models.py  schemas.py
src/scraper/: views.py
